2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Maintain $cond_string sync with
	@cond_stack.
	Output rules only if not under `FALSE'.
	Define variables under $cond_string.
	* scripts.am: For the time being if/endif does not work properly
	with macros.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (IF_PATTERN): Unobfuscate the parens.
	(ENDIF_PATTERN): Allow a condition to be specified.
	(&file_contents): Use a @cond_stack.
	(&transform): At least for an easy transition, also transform
	%?FOO% and %!FOO%, as suggested by Lars.
	* scripts.am: First test bed for static if/endif use.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Use rule_define.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Don't rely on $1.
	Initialize the variable.
	Set its Automakism only if not defined or if given to the user.
	When concatenating values, insert a separator only if the value
	was not empty.
	(&read_am_file): When dumping the @var_list, skip Automake
	variables.
	(&file_contents): Use macro_define.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&rule_define): Extract from...
	(&read_am_file): here.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define, &read_am_file): More work for the
	former from the latter.  Reorganize the latter.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Extract from...
	(&read_am_file): here.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (%am_var_defs): Replace with...
	(%var_is_am): this.
	(&handle_installdirs, &variable_value_as_list_worker, &read_am_file)
	(&file_contents, am_primary_&prefixes): Adjust.
	(&variable_defined, &define_variable): The actual semantics is
	`user defined'.
	(&read_main_am_file): Assert the var is user defined when
	outputting @var_list.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (read_am_file): TRUE and FALSE are predefined