@@ -1,5 +1,12 @@
 2001-03-23  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&conditional_dump): Rename as...
+	(&variables_dump): this.  Use...
+	(&variable_dump): this new sub.
+
+	
+2001-03-23  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&file_contents): Maintain $cond_string sync with
 	@cond_stack.
 	Output rules only if not under `FALSE'.
